<resources>
    <string name="app_name">FinPocketReplica</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="watch_list">Watch List</string>
    <string name="portfolio">Portfolio</string>
    <string name="order">Order</string>
    <string name="order_status">Order Status</string>
    <string name="main_dashboard">Main Dashboard</string>
    <string name="brokerage_calcultor">Brokerage Calcultor</string>
    <string name="faqs">FAQs</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="view_profile">View Profile</string>
    <string name="user_example_com">user@example.com</string>
    <string name="user_name">User Name</string>
    <string name="user_image">User Image</string>
    <string name="_00_00">00.00</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="total_price_of_share">Total Price of Share</string>
    <string name="brokeragetaxnettotal">BrokerageTaxNetTotal</string>
    <string name="increment_sign">Increment Sign</string>
    <string name="_0">0</string>
    <string name="decrement_sign">Decrement Sign</string>
    <string name="quantity">Quantity</string>
    <string name="sell">SELL</string>
    <string name="buy">BUY</string>
    <string name="order_type">Order Type</string>
    <string name="app_logo">App Logo</string>
    <string name="menu_button">Menu Button</string>
    <string name="real">Real</string>
    <string name="demo">Demo</string>
    <string name="back_button">Back Button</string>
    <string name="search_all">Search All</string>
    <string name="market_state_close">Market State: Close</string>
    <string name="market_state_open">Market State: Open</string>
    <string name="all">All</string>
    <string name="company">Company</string>
    <string name="index">Index</string>
    <string name="profile">Profile</string>
    <string name="indices">Indices</string>
    <string name="market_movers">Market Movers</string>
    <string name="top_gainers">Top Gainers</string>
    <string name="top_losers">Top Losers</string>
    <string name="shariah">Shariah</string>
    <string name="news">News</string>
</resources>