<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutSideNavMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewMarketOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/market_state_open"
            android:textSize="12sp"
            android:padding="2dp"
            android:visibility="gone"
            android:background="@color/app_green"
            android:textColor="@color/white"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/textViewMarketClosed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewMarketOpen"
            android:text="@string/market_state_close"
            android:textSize="12sp"
            android:padding="2dp"
            android:visibility="gone"
            android:background="@color/red"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutTopAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewMarketClosed"
            android:background="@color/app_green">

            <ImageButton
                android:id="@+id/imageButtonOpenSideNav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/menu_button" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/materialToggleGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:selectionRequired="true"
                app:singleSelection="true">

                <Button
                    android:id="@+id/buttonReal"
                    style="@style/toggleButtonInActive"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/real"
                    android:gravity="center"
                    android:textColor="@color/app_green"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/buttonDemo"
                    style="@style/toggleButtonInActive"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:backgroundTint="@color/app_green"
                    android:text="@string/demo"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <ImageButton
                android:id="@+id/imageButtonSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/imageButtonAccount"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <ImageButton
                android:id="@+id/imageButtonAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_account_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <fragment
            android:id="@+id/fragmentContainerView"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayoutTopAppBar"
            app:navGraph="@navigation/nav_graph" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemTextAppearanceActive="@style/navTextActive"
            app:itemTextAppearanceInactive="@style/navTextInactive"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/bottom_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_side_nav_header"
        app:itemIconTint="@color/app_blue"
        app:menu="@menu/side_menu" />

</androidx.drawerlayout.widget.DrawerLayout>